--- a/style.css
+++ b/style.css
@@ -53,21 +53,31 @@ body {
     color: #A10332;
 }
 
-/* Hamburger menu toggle button */
-.navbar-toggle {
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
+/* Links (LinkedIn, GitHub, Email) */
+.home-sci a {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid black;
+    border-radius: 50%;
+    font-size: 20px;
+    color: black;
+    text-decoration: none;
+    transition: color 0.3s, border-color 0.3s;
 }
 
-.navbar-toggle div {
-    width: 100%;
-    height: 4px;
-    background-color: #333;
-    transition: all 0.3s;
+.home-sci a:hover {
+    color: #A10332;
+    border-color: #A10332;
+}
+
+.home-sci a:active {
+    color: #A10332;
+    border-color: #A10332;
 }
 
 /* Home section */
@@ -110,30 +120,8 @@ body {
     transition: 1.9s;
 }
 
-.home-sci a {
-    position: relative;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    background: transparent;
-    border: 2px solid black;
-    border-radius: 50%;
-    font-size: 20px;
-    color: black;
-    text-decoration: none;
-    transition: color 0.3s;
-}
-
-.home-sci a:hover {
-    color: #A10332;
-    border-color: #A10332;
-}
-
 /* Responsive Design */
 @media (max-width: 768px) {
-
     /* Stack navbar items vertically */
     .navbar {
         display: none;
@@ -198,4 +186,5 @@ body {
         display: flex;
     }
 }
+
 
