--- a/contact.css
+++ b/contact.css
@@ -156,4 +156,9 @@ footer p {
     .linkedin-logo-container img {
         width: 24px;
     }
+
+    /* Hide the 'Aldo Mata' text on mobile */
+    .name {
+        display: none;
+    }
 }
